lista z javy poczatek

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
         <item>Pojsc na spacer</item>
         <item>Pojsc na randke</item>
     </string-array>
+
+    <string-array name="priorytety">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
